# AiSD-2016

./: CMakeLists.txt  skrypt.sh
Pracownia_A/: sznurki.cpp
Pracownia_A/Testy/: 2.in
Pracownia_A/test/: 1.in  10.in  100.in  11.in  12.in  13.in  14.in  15.in  16.out  17.in  18.in  19.out  20.in  21.in  22.in  23.in  24.in  24.out  25.in  26.in  27.in  28.in  29.in  30.in  31.in  32.in  33.in  34.in  35.out  36.in  37.out  38.in  39.in  4.in  40.in  41.in  42.in  43.in  44.out  45.in  (+57 more)
Pracownia_B/: skoczek.cpp
